project(Rocprep)

FILE(GLOB perfiles ./*.pm)

foreach(PERL_FILE ${perlfiles} rocprep)
	file(COPY ${PERL_FILE} DESTINATION ${CMAKE_BINARY_DIR}/bin 
		FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
		GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
endforeach()

INSTALL(FILES ${perfiles} DESTINATION bin)
INSTALL(PROGRAMS rocprep DESTINATION bin)

